# termissh

./: .env.example  .gitignore  Cargo.toml  README.md  auto-release.sh  build.rs  build.sh  macos.sh  release.sh
.claude/: settings.local.json
.github/workflows/: build.yml
TermiSSH.app/Contents/: Info.plist
TermiSSH.app/Contents/Resources/: TermiSSH.icns
TermiSSH.app/Contents/_CodeSignature/: CodeResources
src/: api.rs  app.rs  config.rs  ftp.rs  i18n.rs  main.rs  syspanel.rs  theme.rs
src/terminal/: bridge.rs  mod.rs  relay_mode.rs
src/ui/: dialogs.rs  ftp_panel.rs  mod.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toolbar.rs
