[package]
name = "termissh"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9.5"
directories = "5.0"
anyhow = "1.0"
lazy_static = "1.4"
ureq = { version = "2", features = ["json"] }
dotenv = "0.15"
sysinfo = "0.30"
strip-ansi-escapes = "0.2"