[package]
name = "termissh"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "termissh"
path = "src/main.rs"

[[bin]]
name = "termissh-relay"
path = "src/bin/relay.rs"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "advanced", "image"] }
iced_aw = { version = "0.11", default-features = false, features = ["tabs"] }
ssh2 = "0.9.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
ureq = { version = "2", features = ["json"] }
dotenv = "0.15"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
crossterm = "0.28"
ratatui = "0.29"
lazy_static = "1.5"
vt100 = "0.15"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
